force-app/main/default/objects/FieldMapping__mdt/FieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Field Mapping Custom Metadata</label>
    <pluralLabel>Field Mappings (Custom Metadata)</pluralLabel>
</CustomObject>