force-app/main/default/objects/FieldMapping__mdt/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this field used as an external id for upsert operations?</description>
    <inlineHelpText>Is this field used as an external id for upsert operations?</inlineHelpText>
    <label>External Id</label>
    <type>Checkbox</type>
</CustomField>