force-app/main/default/objects/FieldMapping__mdt/fields/RecordUpdateMap__c.field-meta.xml
<CustomField>
    <fullName>RecordUpdateMap__c</fullName>
    <label>Record Update Map</label>
    <referenceTo>RecordUpdateMap__mdt</referenceTo>
    <relationshipName>Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>