force-app/main/default/objects/FieldMapping__mdt/fields/ReferenceTo__c.field-meta.xml
<CustomField>
    <fullName>ReferenceTo__c</fullName>
    <label>ReferenceTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>