force-app/main/default/objects/FieldMapping__mdt/fields/StaticValue__c.field-meta.xml
<CustomField>
    <fullName>StaticValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Static Value</label>
    <type>Checkbox</type>
</CustomField>