force-app/main/default/objects/FieldMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source__c</columns>
    <columns>Target__c</columns>
    <columns>ExternalId__c</columns>
    <columns>StaticValue__c</columns>
    <columns>ReferenceTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>